Fix alignment in head_name class
Update alignment properties for head_name class

--- a/style.css
+++ b/style.css
@@ -11,5 +11,6 @@ h1{
 }
 .head_name{
     text-align: center;
-    align:center;
+    align-items: center;
+    align-content: center;
 }
